--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = aioshenanigans
-version = 0.0.4
+version = 0.0.5
 author = Serhii Charykov
 author_email = serhii.charykov@gmail.com
 description = A small helper package for common patterns in asyncio
@@ -22,3 +22,6 @@ python_requires = >=3.6
 
 [options.packages.find]
 where = src
+
+[options.package_data]
+aioshenanigans = py.typed
